style.css
/* ... */
.toc-mobile-toggle {
  width: 100%;
  top: 20px;
  padding: 14px 16px;
  font-size: 16px;
  border: none;
  background: white;
  display: flex;
  justify-content: space-between;
  background-color: $grey_color;
}

/* dropdown */
.toc-mobile-content {
  display: none;
  background: white;
  border-bottom: 1px solid #eee;
  position: sticky;
  top: 48px; /* under bar */
  z-index: 998;
  border-radius: 0 0 15px 15px;
  background-color: $grey_color;
}

.toc-mobile-content.open {
  display: block;
}

.toc-mobile-content ul {
  list-style: none;
  margin: 0;
  padding: 10px 16px;
}

/* MOBILE ONLY */
@media (max-width: 768px) {
  .toc-mobile-bar {
    display: block;
  }

  .toc-container {
    display: none;
  }

  .article-body {
    max-width: 100%;
  }

  .toc-mobile-content li {
    margin-top: 15px;
  }
  h2,
  h3 {
    scroll-margin-top: 20vh;
  }
}

.toc-container {
  display: none;
  width: 30vw;
  position: sticky;
  top: 100px;
  background-color: $grey_color;
  max-height: calc(100vh - 120px);
  overflow-y: auto;
  padding: 30px 20px;
  border-radius: 15px;
}

#toc li {
  margin-bottom: 20px;
}

.article-content {
  flex: 1;
  color: #038153;
}

/***** article page 
#main-content .article {
  max-width: 500px;
}
  *****/

/***** Search field *****/
.search-container {
  position: relative;
  width: 100%;
}

.search {
  border-color: #848f99;
  border-radius: 30px;
  border-style: solid;
  border-width: 1px;
  display: flex;
  position: relative;
  transition: border 0.12s ease-in-out;
}
.search:focus-within {
  border-color: $brand_color;
}
.search input[type="search"],
.search .clear-button {
  background-color: #fff;
  border-radius: 30px;
  border: none;
}
.search-full input[type="search"],
.search-full .clear-button {
  border-color: #fff;
}
.search input[type="search"] {
  appearance: none;
  -webkit-appearance: none;
  box-sizing: border-box;
  color: #666;
  flex: 1 1 auto;
  height: 40px;
  width: 100%;
}
.search input[type="search"]:focus {
  color: #555;
}
.search input[type="search"]::-webkit-search-decoration,
.search input[type="search"]::-webkit-search-cancel-button,
.search input[type="search"]::-webkit-search-results-button,
.search input[type="search"]::-webkit-search-results-decoration {
  -webkit-appearance: none;
}
.search input[type="search"]:-webkit-autofill,
.search input[type="search"]:-webkit-autofill:hover,
.search input[type="search"]:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0 1000px #fff inset;
}
.search .clear-button {
  align-items: center;
  box-sizing: border-box;
  color: #777;
  cursor: pointer;
  display: none;
  flex: none;
  justify-content: center;
  padding: 0 15px;
}
.search .clear-button:hover {
  background-color: $brand_color;
  color: #fff;
}
.search .clear-button:focus {
  outline: 0;
  box-shadow: 0 0 0 3px $brand_color;
}
.search-has-value .clear-button {
  display: flex;
}

[dir="ltr"] .search input[type="search"] {
  padding-left: 40px;
  padding-right: 20px;
}
[dir="ltr"] .search-has-value input[type="search"] {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border-right-color: transparent;
}
[dir="ltr"] .search-has-value input[type="search"]:focus {
  border-right-color: $brand_color;
}
[dir="ltr"] .search .clear-button {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-left-color: transparent;
}
[dir="ltr"] .search .clear-button:focus {
  border-left-color: $brand_color;
}

[dir="rtl"] .search input[type="search"] {
  padding-left: 20px;
  padding-right: 40px;
}
[dir="rtl"] .search-has-value input[type="search"] {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-left-color: transparent;
}
[dir="rtl"] .search-has-value input[type="search"]:focus {
  border-left-color: $brand_color;
}
[dir="rtl"] .search .clear-button {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
  border-right-color: transparent;
}
[dir="rtl"] .search .clear-button:focus {
  border-right-color: $brand_color;
}

.search-icon {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  position: absolute;
  left: 15px;
  z-index: 1;
  width: 18px;
  height: 18px;
  color: $brand_color;
  pointer-events: none;
}
[dir="rtl"] .search-icon {
  left: auto;
  right: 15px;
}

/***** Hero component *****/
.hero {
  background-image: url($homepage_background_image);
  background-position: center;
  background-size: cover;
  height: 200px;
  padding: 0 20px;
  text-align: center;
  width: 100%;
}
@media (min-width: 1024px) {
  .hero {
    height: 300px;
  }
}
.hero-inner {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  max-width: 610px;
  margin: 0 auto;
}

.page-header {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
}
@media (min-width: 768px) {
  .page-header {
    align-items: baseline;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 16px;
    margin: 0;
  }
}
.page-header .section-subscribe {
  flex-shrink: 0;
  margin-bottom: 10px;
}
@media (min-width: 768px) {
  .page-header .section-subscribe {
    margin-bottom: 0;
  }
}

.page-header-description {
  font-style: italic;
  margin: 0 0 30px 0;
  word-break: break-word;
}
@media (min-width: 1024px) {
  .page-header-description {
    flex-basis: 100%;
  }
}
.page-header .icon-lock {
  height: 20px;
  width: 20px;
  position: relative;
  left: -5px;
  vertical-align: baseline;
}

.sub-nav {
  align-items: baseline;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 15px 30px;
  justify-content: space-between;
  margin-bottom: 20px;
}
@media (min-width: 768px) {
  .sub-nav {
    flex-direction: row;
  }
}
.sub-nav .breadcrumbs {
  margin: 0;
}
.sub-nav .search-container {
  max-width: 300px;
  width: 100%;
}
@media (min-width: 768px) {
  .sub-nav .search-container {
    flex: 0 1 300px;
  }
}
.sub-nav input[type="search"]::after {
  font-size: 15px;
}
/* ... */

